--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "@bot-whatsapp/portal": "dev",
     "node-dependency-injection": "^3.0.3",
     "nodemon": "^2.0.20",
     "qr-image": "^3.2.0",
