--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@bot-whatsapp/portal": "dev",
     "axios": "^0.27.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "@bot-whatsapp/portal": "dev",
     "node-dependency-injection": "^3.0.3",
     "nodemon": "^2.0.20",
     "qr-image": "^3.2.0",
+    "qrcode": "^1.5.3",
+    "qrcode-terminal": "^0.12.0",
     "twilio": "^3.80.1",
     "uuid": "^8.3.2",
     "whatsapp-web.js": "^1.23.0"
